# cfd-demo2

./: .gitignore  AGENTS.md  CODEGEN_PLAN.md  COMPRESSIBLE_SOLVER_INVESTIGATION.md  Cargo.toml  FINDINGS_COMMIT_GENERATED_WGSL.md  FUSION.md  FUSION_COVERAGE.md  GENERATED_WGSL_POLICY.md  MIGRATION_PORT_REFACTOR.md  OPENFOAM_DISCREPANCY_PLAN.md  PERFORMANCE_ANALYSIS.md  PORT_REFACTOR_PLAN.md  README.md  REFERENCE_SOLUTIONS.md  TIME_STEPPING_CHANGE.md  build.rs
.github/workflows/: check-generated-wgsl.yml
benches/: compressible_solver_benchmark.rs  cpu_solver_benchmark.rs  delaunay_benchmark.rs  delaunay_voronoi_benchmark.rs  gpu_dispatch_benchmark.rs  gpu_solver_benchmark.rs  large_mesh_benchmark.rs  mesh_benchmark.rs  mesh_profile.rs  mesh_smoothing_benchmark.rs  solver_comparison_benchmark.rs  voronoi_benchmark.rs
crates/cfd2_codegen/: Cargo.toml
crates/cfd2_codegen/src/: compiler.rs  lib.rs
crates/cfd2_codegen/src/solver/: mod.rs
crates/cfd2_ir/: Cargo.toml
crates/cfd2_macros/: Cargo.toml
crates/cfd2_macros/src/: lib.rs
crates/cfd2_macros/tests/: port_set_tests.rs
examples/: analyze_gpu_dispatches.rs  compare_solvers.rs  profile_dispatch_analysis.rs  profile_gpu.rs  profile_gpu_transfer.rs  profile_mesh_generation.rs  profile_solver_performance.rs  reproduce_chamfer.rs  reproduce_divergence.rs  reproduce_hole.rs  reproduce_voronoi_quality.rs  run_solver.rs
scripts/: check_generated_wgsl.sh  check_ir_boundary.sh  regenerate_openfoam_reference_data.sh  run_one_submission_hard_gates.sh  run_openfoam_reference_tests.sh
scripts/openfoam/: extract_probes_to_csv.py  generate_probes_all_cfg.py
src/: lib.rs  main.rs  test_wide.rs  trace.rs
src/meshgen/: cut_cell.rs  delaunay.rs  geometry.rs  meshgen_ext.rs  meshgen_utils.rs  mod.rs  tests.rs  voronoi.rs
src/solver/: dimensions.rs  float.rs  fvm.rs  gpu.rs  linear_solver.rs  mesh.rs  mod.rs  options.rs  parallel.rs  piso.rs  profiling.rs  scheme.rs  units.rs
src/solver/backend/: mod.rs
src/solver/codegen/: ast.rs  coeff_expr.rs  compressible_apply.rs  compressible_assembly.rs  compressible_explicit_update.rs  compressible_flux_kt.rs  compressible_gradients.rs  compressible_update.rs  coupled_assembly.rs  emit.rs  flux_kt.rs  flux_rhie_chow.rs  generic_coupled_kernels.rs  incompressible_fields.rs  ir.rs  kt_gradients.rs  method_ei.rs  mod.rs  model.rs  plan.rs  prepare_coupled.rs  pressure_assembly.rs  reconstruction.rs  scheme.rs  state_access.rs  state_layout.rs  unified_assembly.rs  update_fields_from_coupled.rs  wgsl.rs  wgsl_ast.rs  wgsl_dsl.rs
src/solver/compiler/: emit.rs  mod.rs
src/solver/gpu/: CSR_CONTRACT.md  async_buffer.rs  bindings.rs  buffers.rs  compressible_fgmres.rs  compressible_solver.rs  context.rs  coupled_solver.rs  coupled_solver_fgmres.rs  csr.rs  dispatch_counter.rs  enums.rs  env_utils.rs  execution_plan.rs  fgmres_gpu.rs  generic_coupled_solver.rs  gpu_timestamp_profiler.rs  initialization.rs  kernel_graph.rs  linear_solver.rs  mod.rs  model_defaults.rs  multigrid_solver.rs  preconditioners.rs  profiling.rs  profiling_disabled.rs  profiling_enabled.rs  readback.rs  recipe.rs  runtime.rs  runtime_common.rs  solver.rs  solver_api.rs  structs.rs  submission_counter.rs  unified_solver.rs  wgsl_meta.rs  wgsl_reflect.rs
src/solver/ir/: mod.rs
src/solver/kernels/: mod.rs
src/solver/mesh/: cut_cell.rs  delaunay.rs  geometry.rs  meshgen_ext.rs  meshgen_utils.rs  mod.rs  quadtree.rs  structs.rs  structured.rs  tests.rs  utils.rs  voronoi.rs
src/solver/model/: ast.rs  definitions.rs  eos.rs  fluid.rs  flux_layout.rs  flux_module.rs  flux_schemes.rs  gpu_spec.rs  invariants.rs  kernel.rs  linear_solver.rs  method.rs  mod.rs  module.rs  primitives.rs  scheme.rs  state_layout.rs
src/solver/shaders/: compute_d_p.wgsl  dot_product.wgsl  dot_product_pair.wgsl  flux_correction.wgsl  flux_rhie_chow.wgsl  gradient.wgsl  linear_solver.wgsl  matrix_assembly.wgsl  momentum_assembly.wgsl  momentum_assembly_v2.wgsl  pressure_assembly.wgsl  pressure_assembly_with_grad.wgsl  scalars.wgsl  solver.wgsl  update_p_field.wgsl  update_u_component.wgsl  velocity_correction.wgsl
src/solver/shared/: expr.rs  mod.rs  wgsl_dsl.rs
src/ui/: app.rs  cfd_mesh_shader.wgsl  cfd_renderer.rs  fluid.rs  mod.rs
tests/: amg_test.rs  amg_verification.rs  backwards_step_mesh_points_test.rs  comparison_test.rs  contract_codegen_invariants_test.rs  contract_dtau_not_dead_test.rs  contract_method_driven_named_params_test.rs  coupled_schemes_test.rs  cpu_parallel_divergence_test.rs  debug_obstacle_mesh.rs  delaunay_test.rs  diag_incompressible_channel_flux_balance_test.rs  diag_incompressible_channel_outer_iters_test.rs  gpu_1d_structured_regression_test.rs  gpu_codegen_matches_manual_test.rs  gpu_compressible_amg_smoke_test.rs  gpu_compressible_block_jacobi_smoke_test.rs  gpu_compressible_dual_time_uniform_state_test.rs  gpu_compressible_solver_test.rs  gpu_compressible_validation_test.rs  gpu_cpu_comparison.rs  gpu_divergence_test.rs  gpu_fine_mesh_obstacle.rs  gpu_generic_incompressible_schur_smoke_test.rs  gpu_generic_unified_solver_test.rs  gpu_low_mach_convergence_smoke_test.rs  gpu_low_mach_debug_fast_test.rs  gpu_low_mach_effect_smoke_test.rs  gpu_low_mach_equivalence_cases_test.rs  gpu_low_mach_equivalence_test.rs  gpu_profile.rs  gpu_solver_scaling_test.rs  gpu_test.rs  gpu_transfer_profile.rs  lid_driven_cavity_compressible_vs_incompressible.rs  lid_driven_cavity_compressible_vs_incompressible_same_fgmres.rs  matrix_diagonal_test.rs  mesh_profile_test.rs  model_analytical_solutions_test.rs  openfoam_compressible_acoustic_reference_test.rs  (+21 more)
tests/openfoam_reference/: common.rs
tests/openfoam_reference/data/: compressible_acoustic_centerline.csv  compressible_acoustic_full_field.csv  compressible_backwards_step_full_field.csv  compressible_lid_driven_cavity_full_field.csv  compressible_supersonic_wedge_full_field.csv  incompressible_backwards_step_full_field.csv  incompressible_channel_centerline.csv  incompressible_channel_full_field.csv  incompressible_lid_driven_cavity_full_field.csv
(+294 files in other folders)
