[package]
name = "cfd2"
version = "0.1.0"
edition = "2021"

[profile.test]
inherits = "release"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"] }
egui_plot = "0.34"
nalgebra = "0.32"
geo = "0.26"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
wide = "0.8.3"
rayon = "1.8"
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
num-traits = "0.2.19"
ahash = "0.8.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mesh_benchmark"
harness = false

[[bench]]
name = "large_mesh_benchmark"
harness = false

[[bench]]
name = "gpu_solver_benchmark"
harness = false
