[package]
name = "cfd2"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/cfd2_ir", "crates/cfd2_codegen"]

[profile.test]
inherits = "release"

[dependencies]
cfd2_ir = { path = "crates/cfd2_ir" }
cfd2_codegen = { path = "crates/cfd2_codegen" }
egui = { version = "0.33", optional = true }
eframe = { version = "0.33", features = ["wgpu", "default_fonts"], optional = true }
egui_plot = { version = "0.34", optional = true }
nalgebra = "0.32"
rand = { version = "0.8", optional = true }
log = "0.4"
env_logger = { version = "0.10", optional = true }
wide = { version = "0.8.3", optional = true }
rayon = { version = "1.8", optional = true }
wgpu = "27.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
ahash = { version = "0.8.12", optional = true }

[features]
default = []
ui = ["dep:egui", "dep:eframe", "dep:egui_plot", "dep:env_logger"]
ui_meshgen = ["ui", "meshgen"]
meshgen = ["dep:ahash", "dep:rand", "dep:wide", "dep:rayon"]
profiling = []
dev-tests = []

[dev-dependencies]
criterion = "0.5"
image = "0.25"

[build-dependencies]
cfd2_ir = { path = "crates/cfd2_ir" }
cfd2_codegen = { path = "crates/cfd2_codegen" }
wgsl_bindgen = "0.21.2"
glob = "0.3"

[[bin]]
name = "cfd2"
path = "src/main.rs"
required-features = ["ui"]

[[test]]
name = "amg_test"
path = "tests/amg_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "coupled_schemes_test"
path = "tests/coupled_schemes_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "debug_obstacle_mesh"
path = "tests/debug_obstacle_mesh.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "delaunay_test"
path = "tests/delaunay_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_1d_structured_regression_test"
path = "tests/gpu_1d_structured_regression_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_codegen_matches_manual_test"
path = "tests/gpu_codegen_matches_manual_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_compressible_amg_smoke_test"
path = "tests/gpu_compressible_amg_smoke_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_compressible_block_jacobi_smoke_test"
path = "tests/gpu_compressible_block_jacobi_smoke_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_compressible_solver_test"
path = "tests/gpu_compressible_solver_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_compressible_validation_test"
path = "tests/gpu_compressible_validation_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_divergence_test"
path = "tests/gpu_divergence_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_fine_mesh_obstacle"
path = "tests/gpu_fine_mesh_obstacle.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_generic_unified_solver_test"
path = "tests/gpu_generic_unified_solver_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_low_mach_convergence_smoke_test"
path = "tests/gpu_low_mach_convergence_smoke_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_low_mach_debug_fast_test"
path = "tests/gpu_low_mach_debug_fast_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_low_mach_equivalence_test"
path = "tests/gpu_low_mach_equivalence_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "gpu_solver_scaling_test"
path = "tests/gpu_solver_scaling_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "model_analytical_solutions_test"
path = "tests/model_analytical_solutions_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "test_channel_obstacle_mesh"
path = "tests/test_channel_obstacle_mesh.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "test_mesh_comparison"
path = "tests/test_mesh_comparison.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "ui_compressible_air_backstep_smoke_test"
path = "tests/ui_compressible_air_backstep_smoke_test.rs"
required-features = ["meshgen", "dev-tests"]

[[test]]
name = "ui_incompressible_air_smoke_test"
path = "tests/ui_incompressible_air_smoke_test.rs"
required-features = ["meshgen", "dev-tests"]

[[bench]]
name = "mesh_benchmark"
harness = false
required-features = ["meshgen"]

[[bench]]
name = "large_mesh_benchmark"
harness = false
required-features = ["meshgen"]

[[bench]]
name = "gpu_solver_benchmark"
harness = false
required-features = ["meshgen"]

[[bench]]
name = "delaunay_voronoi_benchmark"
harness = false
required-features = ["meshgen"]

[[bench]]
name = "gpu_dispatch_benchmark"
harness = false
required-features = ["meshgen"]

[[bench]]
name = "mesh_profile"
harness = false
required-features = ["meshgen"]

[[bench]]
name = "mesh_smoothing_benchmark"
harness = false
required-features = ["meshgen"]

[[bench]]
name = "delaunay_benchmark"
harness = false
required-features = ["meshgen"]

[[bench]]
name = "voronoi_benchmark"
harness = false
required-features = ["meshgen"]
